fix overflow

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -335,6 +335,7 @@ p.post-date:after {
 .post-logos {
   min-width: 150px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-top: 1rem;
@@ -342,10 +343,11 @@ p.post-date:after {
 
 .post-logos .post-logos-single {
   background-color: rgba(255, 255, 255, 0.5);
-  padding: 0.5rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   border-radius: 10px;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .blog-post p,
